# server/src/controllers/auth.controller.ts
@@ -1,12 +1,12 @@
+import {
+  LoginRequest,
+  LoginResponse,
+  PasswordResetRequest as ResetPasswordRequest,
+} from '@nextask/types';
 import type { Request as ExRequest } from 'express';
 import { Body, Controller, Post, Request, Route, Security, SuccessResponse, Tags } from 'tsoa';
 
-import {
-  AuthData,
-  AuthService,
-  LoginRequest,
-  ResetPasswordRequest,
-} from '../services/auth.service';
+import { AuthService } from '../services/auth.service';
 import { ApiResponse, successResponse } from '../utils/response.util';
 
 @Route('auth')
@@ -21,7 +21,7 @@ export class AuthController extends Controller {
 
   @SuccessResponse('200', 'OK')
   @Post('login')
-  public async login(@Body() requestBody: LoginRequest): Promise<ApiResponse<AuthData>> {
+  public async login(@Body() requestBody: LoginRequest): Promise<ApiResponse<LoginResponse>> {
     this.setStatus(200);
     const data = await this.authService.login(requestBody);
     return successResponse('Login successful.', data);
@@ -38,7 +38,7 @@ export class AuthController extends Controller {
   public async resetPassword(
     @Body() requestBody: ResetPasswordRequest,
     @Request() request: ExRequest,
-  ): Promise<ApiResponse<AuthData>> {
+  ): Promise<ApiResponse<LoginResponse>> {
     this.setStatus(200);
     const { userId } = (request as any).user;
     const data = await this.authService.resetPassword(userId, requestBody);
